card-component--and--input-component---updated

--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -2,8 +2,7 @@
     width: 20rem;
     height: px;
     overflow: hidden;
-    padding: 1rem;
-    margin: 1rem;
-
+    padding: rem;
+    margin-top: 1rem;
     
 }
